--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
 
 body, html {
   background-color: gray;
+  min-height: 100vh;
 }
 
 body {
@@ -65,13 +66,45 @@ nav {
 }
 
 nav > button {
+  position: relative;
   border: none;
   margin-bottom: 20px;
-  background-color: gray;
+  background-color: white;
   width: 65%;
+  margin-right: 4px;
   text-align: center;
-  border-radius: 10px 0px 0px 10px;
+  border-radius: 100px 100px 100px 100px;
   padding: 20px;
+  transition: margin-right 0.5s ease, border-radius 0.5s ease;
+}
+
+nav > button.active-bubble::before,
+nav > button.active-bubble::after {
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  height: 60px;
+  width: 40px;
+  right: 0;
+  transition: box-shadow 0.7s ease;
+}
+
+nav > button.active-bubble::before {
+  top: 100%;
+  border-top-right-radius: 50%;
+  box-shadow: 0 -30px 0 0 white;
+}
+
+nav > button.active-bubble::after {
+  bottom: 100%;
+  border-bottom-right-radius: 50%;
+  box-shadow: 0 30px 0 0 white;
+}
+
+.active-nav {
+  margin-right: 0px;
+  border-radius: 10px 0px 0px 10px;
+  transition: margin-right 0.5s ease, border-radius 0.5s ease;
 }
 
 #items-nav {
@@ -82,10 +115,6 @@ nav > button {
 #merchants-nav {
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
-}
-
-.active-nav {
-  background-color: white;
 }
 
 /* MAIN */
@@ -101,8 +130,8 @@ main {
 form {
   display: flex;
   gap: .5rem;
+  align-items: center;
 }
-
 .item,
 .merchant {
   display: flex;
@@ -181,10 +210,9 @@ body {
   }
 }
 
-button{
+/* button{
   border-radius: 15px;
-  
-}
+} */
 
 button {
   background-color: white;
