--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ form {
   display: none;
 } 
   
-/* Added CSS */
+/* Background*/
 body {
   background: linear-gradient(to bottom, #91267c, #f39c12, #00bfff);
   background-size: 200% 200%;
@@ -210,10 +210,7 @@ body {
   }
 }
 
-/* button{
-  border-radius: 15px;
-} */
-
+/* Button design */
 button {
   background-color: white;
   border-radius: 100px;
@@ -238,4 +235,17 @@ main button {
 main button:hover {
   box-shadow: rgba(0, 0, 0, 0.35) 0 4px 8px;
   transform: scale(1.05);
+}
+
+
+/* Views fade animations */
+#items-view,
+#merchants-view {
+  opacity: 0;
+  transition: opacity 0.7s ease; 
+}
+
+#items-view.fade-in,
+#merchants-view.fade-in {
+  opacity: 1; 
 }
